# rsdex

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  pokedex.jsonl
rsdex_bin/: Cargo.toml  README.md
rsdex_bin/src/: main.rs
rsdex_lib/: Cargo.toml  README.md  build.rs  pokedex.jsonl
rsdex_lib/src/: data_types.rs  lib.rs  pokedex.rs  pokemon.rs  search.rs
rsdex_main/: Cargo.toml  build.rs
rsdex_main/src/: data_types.rs  lib.rs  main.rs  pokedex.rs  pokemon.rs
src/: main.rs  pokedex.rs  pokemon.rs
