[workspace]
resolver = "2"
members = ["rsdex_main","rsdex_lib"]
default-members = ["rsdex_main","rsdex_lib"]
package.version = "0.1.70"
package.repository = "https://github.com/PurpleCraft999/rsdex"





[workspace.dependencies]
serde = {version = "1.0.228",features = ["derive"]}
serde_json = "1.0.149"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package]
name = "rsdex"

[lib]
path = "rsdex_lib/"

[[bin]]
name = "rsdex"
path = "rsdex_main/"

