[workspace]
resolver = "2"
members = ["rsdex_main","rsdex_lib"]
default-members = ["rsdex_main","rsdex_lib"]





[workspace.dependencies]
serde = {version = "1.0.228",features = ["derive"]}
serde_json = "1.0.149"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


[workspace.package]
edition = "2024"
readme = "README.md"
repository = "https://github.com/PurpleCraft999/rsdex"
version = "0.1.80"
authors = ["PurpleCraft999"]

