[package]
name = "rsdex_bin"
license = "MIT"
edition.workspace = true
version = "0.1.88"
repository.workspace = true
authors.workspace = true
readme = "README.md"
description = "a little tool that behaves as a pokedex"


[package.metadata.dist]
dist = true


[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
pulldown-cmark = {version = "0.13.0",default-features = false}
# rsdex_lib = { path = "../rsdex_lib"}
rsdex_lib = "0.1.89"
[[bin]]
name = "rsdex"
path = "src/main.rs"
