[package]
name = "rsdex_lib"
edition.workspace = true
version ="0.1.87"
description = "A library that allow you too search up pokemon based on data"
license = "MIT"
repository.workspace = true
authors.workspace = true
readme.workspace = true


[lib]
path = "src/lib.rs"

[dependencies]
serde_json ={ workspace = true}
serde = {workspace = true}
strum = { version = "0.28.0", features = ["derive"] }
memmap2 = "0.9.9"
strsim = "0.11.1"

[build-dependencies]
serde={workspace = true}
serde_json ={workspace = true}

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"



