[package]
name = "rsdex"
license = "MIT"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description = "a little tool that behaves as a pokedex"




[package.metadata.dist]
dist = true




[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
rsdex_lib = {path = "../rsdex_lib/"}


